--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -60,10 +60,18 @@
 <script>
   window.addEventListener('keydown', function(e){
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    if(!audio){return} // stop the function from running;
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    if(!audio){return}; // stop the function from running;
     audio.currentTime = 0;
     audio.play();
-    
+    key.classList.add('playing');
+
+    function removetransition(e){
+      console.log(e);
+    }
+    const keys = document.querySelectorAll('.key');
+    keys.forEach(key => key.addEventListener('transitionend', removetransition));
+
   });
 </script>
 
