--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -68,7 +68,7 @@
   }
 
   function removetransition(e){
-    if(e.propertyName !== 'transform') return;
+    if(e.propertyName !== 'transform-origin') return;
     this.classList.remove('playing');
 
   }
